# IGRISv0.1

./: .env.example  .gitignore  LICENSE  PERSONA.md  README.md  ROADMAP.md  SYSTEM_RULES.md  pyproject.toml  pyrightconfig.json
logs/: 2026-01-11.jsonl
prompts/: BASE_SYSTEM.md  DEEPSEEK_SYSTEM.md  FACE_SYSTEM.md  MISTRAL_SYSTEM.md  PERSONA.md  task_context.txt
scripts/: __init__.py  base.py  deepseek.py  formatting.py  logger.py  mistral.py  orchestrator.py  qwen.py  run_llm.py  start_igris.sh
tests/: .gitignore  __init__.py  conftest.py  test_orchestrator.py
